--- a/index.html
+++ b/index.html
@@ -1,53 +1,2 @@
-
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>De Papo com a PRY — Mentoria Terapêutica</title>
-  <meta name="description" content="Portal da Mentoria Terapêutica — De Papo com a PRY (inscrição, provas, gabarito e área do professor).">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    :root{ --navy:#0b1b3c; --red:#e11d2e; --bg:#f7f7fb; }
-    html,body{ background:var(--bg); font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif; }
-    .btn{ display:inline-flex; align-items:center; gap:.6rem; padding:.9rem 1.2rem; border-radius:999px; font-weight:700; transition:.2s; }
-    .btn:hover{ transform:translateY(-1px); opacity:.96; }
-    .btn-primary{ background:var(--red); color:#fff; }
-    .btn-secondary{ background:var(--navy); color:#fff; }
-    .card{ background:#fff; border:1px solid rgba(0,0,0,.06); border-radius:1.25rem; box-shadow:0 10px 30px rgba(0,0,0,.08); }
-  </style>
-</head>
-<body>
-  <header class="bg-[var(--navy)] text-white">
-    <div class="max-w-6xl mx-auto px-6 py-12">
-      <h1 class="text-4xl font-extrabold">De Papo com a PRY — Mentoria Terapêutica</h1>
-      <p class="opacity-90 mt-2">“Você foi criada para florescer.”</p>
-      <div class="mt-6 flex gap-3 flex-wrap">
-        <a class="btn btn-primary" href="./inscricao-mentoria-terapeutica.html">Fazer inscrição</a>
-        <a class="btn btn-secondary" href="./prova-1-governo-do-espirito.html">Prova 1 — Governo do Espírito</a>
-        <a class="btn btn-secondary" href="./gabarito-prova-1.html">Gabarito — Prova 1</a>
-        <a class="btn" style="border:1px solid #e5e7eb" href="./professor-dashboard.html">Área do Professor</a>
-      </div>
-    </div>
-  </header>
-
-  <main class="max-w-6xl mx-auto px-6 py-10">
-    <div class="card p-8">
-      <h2 class="text-2xl font-bold">Como funciona</h2>
-      <ol class="mt-3 list-decimal list-inside space-y-2">
-        <li>Faça a <a class="text-[var(--red)] underline" href="./inscricao-mentoria-terapeutica.html">inscrição</a> (nome, e-mail, telefone).</li>
-        <li>Acesse a <a class="text-[var(--red)] underline" href="./prova-1-governo-do-espirito.html">Prova 1</a>, responda as 20 questões e veja sua nota (0–10) com feedback.</li>
-        <li>Consulte o <a class="text-[var(--red)] underline" href="./gabarito-prova-1.html">gabarito</a> com versículos completos e comentários.</li>
-      </ol>
-    </div>
-  </main>
-
-  <footer class="mt-16 text-center text-sm opacity-80 py-8">
-    © Pastora Priscila Fagundes / De Papo com a PRY — Todos os direitos reservados.
-  </footer>
-
-</body>
-</html>
+<!doctype html><html lang="pt-BR"><head><title>Mentoria Terapêutica Internacional — De Papo com a PRY</title>  <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="color-scheme" content="dark"/>  <style>:root{--azul:#0b1a2e;--azul2:#0f2744;--branco:#ffffff;--vermelho:#cf2f2f;--vermelho2:#b32525}*{box-sizing:border-box}  html,body{height:100%}body{margin:0;color:var(--branco);font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;background:linear-gradient(135deg,var(--azul),var(--azul2))}  header.nav{position:sticky;top:0;backdrop-filter:blur(8px);background:rgba(0,0,0,.35);border-bottom:1px solid rgba(255,255,255,.12);z-index:10}  .navwrap{max-width:1200px;margin:0 auto;display:flex;align-items:center;gap:18px;justify-content:space-between;padding:12px 16px}  .brand{font-weight:800;letter-spacing:.02em}.menu{display:flex;flex-wrap:wrap;gap:10px}  .menu a{color:#fff;text-decoration:none;padding:8px 12px;border-radius:10px;border:1px solid transparent}  .menu a:hover{background:rgba(255,255,255,.08);border-color:rgba(255,255,255,.12)}.container{max-width:1200px;margin:0 auto;padding:22px 16px}  .card{background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.12);border-radius:18px;padding:18px}  .btn{display:inline-flex;align-items:center;justify-content:center;gap:10px;padding:14px 20px;border-radius:999px;text-decoration:none;color:#fff;font-weight:800;background:linear-gradient(180deg,var(--vermelho),var(--vermelho2));box-shadow:0 8px 24px rgba(207,47,47,.25);border:0}  .btn:hover{transform:translateY(-1px);box-shadow:0 12px 28px rgba(207,47,47,.35)}footer{padding:14px 12px;text-align:center;color:#eee;opacity:.9;border-top:1px solid rgba(255,255,255,.12);position:sticky;bottom:0;background:rgba(0,0,0,.18)}</style>
+  <style>.waves{position:fixed;inset:0;z-index:0;opacity:.55}.waves svg{width:120%;min-width:1200px;position:absolute;left:-10%;bottom:-2%;animation:drift 10s ease-in-out infinite alternate}@keyframes drift{from{transform:translateY(0)}to{transform:translateY(10px)}}  .hero{position:relative;z-index:1;min-height:92dvh;display:grid;grid-template-columns:1fr;align-items:center;gap:28px;max-width:1200px;margin:0 auto;padding:clamp(16px,4vw,40px)}  .title{font-weight:900;line-height:1.04;font-size:clamp(30px,5.2vw,60px);margin:0}.sub{opacity:.95;max-width:60ch;font-size:clamp(16px,2.2vw,20px)}.row{display:flex;gap:12px;flex-wrap:wrap}  .photo{justify-self:center;width:min(92vw,520px);aspect-ratio:3/5;background:url('img/pry-azul.png') center bottom/contain no-repeat;filter:drop-shadow(0 20px 60px rgba(0,0,0,.45))}@media(min-width:960px){.hero{grid-template-columns:1.05fr .95fr}.photo{justify-self:end}}</style></head>  <body><header class="nav"><div class="navwrap"><div class="brand">De Papo com a PRY</div><nav class="menu"><a href="apresentacao.html">Início</a><a href="inscricao.html">Inscrição</a><a href="apostila-governo-do-espirito.html">Apostila</a><a href="prova-1.html">Prova</a><a href="gabarito-prova-1.html">Gabarito</a><a href="sentidos.html">5 Sentidos</a><a href="venda-curso.html">Curso</a><a href="professor.html">Professor</a></nav></div></header>  <div class="waves" aria-hidden="true"><svg viewBox="0 0 1440 320" preserveAspectRatio="none"><path fill="#0f2744" d="M0,64L60,64C120,64,240,64,360,106.7C480,149,600,235,720,229.3C840,224,960,128,1080,101.3C1200,75,1320,117,1380,138.7L1440,160L1440,0L0,0Z"><animate attributeName="d" dur="10s" repeatCount="indefinite" values="M0,64L60,64C120,64,240,64,360,106.7C480,149,600,235,720,229.3C840,224,960,128,1080,101.3C1200,75,1320,117,1380,138.7L1440,160L1440,0L0,0Z;M0,80L60,96C120,112,240,128,360,149.3C480,171,600,197,720,192C840,187,960,149,1080,144C1200,139,1320,149,1380,154.7L1440,160L1440,0L0,0Z;M0,64L60,64C120,64,240,64,360,106.7C480,149,600,235,720,229.3C840,224,960,128,1080,101.3C1200,75,1320,117,1380,138.7L1440,160L1440,0L0,0Z"/></path></svg></div>  <main class="hero"><section><h1 class="title">Mentoria Terapêutica Internacional</h1><p class="sub">“Cuidar da alma é restaurar o governo do Espírito.” — Pastora Priscila Fagundes</p><div class="row"><a class="btn" href="apresentacao.html">Entrar</a><a class="btn" style="background:transparent;border:1px solid rgba(255,255,255,.22);box-shadow:none" href="inscricao.html">Fazer inscrição</a></div></section><div class="photo" role="img" aria-label="Pastora Priscila Fagundes em traje azul."></div></main>  <footer>© Pastora Priscila Fagundes / De Papo com a PRY — Todos os direitos reservados.</footer></body></html>
